CREATE, POST, DEL for bike models and individual bikes
